Correct format in post Request Body
